// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag> Snapshots With custom \`className\` 1`] = `
<span
  className="ys-tag panda"
>
  Nyhed
</span>
`;

exports[`<Tag> Snapshots Without custom \`className\` 1`] = `
<span
  className="ys-tag"
>
  Nyhed
</span>
`;
